<resources>
    <string name="app_name">JobPoster</string>
    <string name="phone_number">0772233445</string>
    <string name="full_name">Full Name</string>
    <string name="email">email@gmail.com</string>
    <string name="password">cornypassword</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an Account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="joblister">JobLister</string>
    <string name="jobseeker">JobSeeker</string>
    <string name="jobs">Jobs</string>
    <string name="notifi">Notifi</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="news">News</string>
</resources>