<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".JobPoster_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Primary">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/ic_arrowback"></ImageView>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/Primary"
            android:padding="20dp">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_person">

            </ImageView>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/image_profile"
                android:includeFontPadding="false"
                android:text="UserName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/image_profile"
                android:text="username@gmail.com"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"></TextView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="499dp"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_smallperson"
                android:drawablePadding="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingBottom="24dp"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingBottom="24dp"
                tools:text="@string/email" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_smallphone"
                android:drawableRight="@drawable/ic_smallphone"
                android:drawablePadding="10dp"
                android:ems="10"
                android:inputType="phone"
                android:paddingBottom="24dp"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_smallkey"
                android:drawableRight="@drawable/ic_smallphone"
                android:drawablePadding="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingBottom="24dp"
                android:text="@string/full_name" />

            <Button
                android:id="@+id/addJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/Primary"
                android:text="Add a Job"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/updateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:backgroundTint="@color/button"
                android:text="Update Account"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingTop="12dp"
                android:text="Delete Account"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="413dp"
                android:layout_height="55dp"
                android:orientation="horizontal"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.998">

                <Button
                    android:id="@+id/btn_Home"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/Primary"
                    android:drawableTop="@drawable/ic_smallhome"
                    android:text="Home"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Notification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/Primary"
                    android:drawableTop="@drawable/nav_notification"
                    android:text="Notifi"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Jobs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/Primary"
                    android:drawableTop="@drawable/baseline_business_center_24"
                    android:text="Job"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Profile"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/Primary"
                    android:drawableTop="@drawable/nav_profile"
                    android:text="Profile"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_More"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/Primary"
                    android:drawableTop="@drawable/baseline_list_24"
                    android:text="More"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

